Remove all Bootstrap styles, fix style guide layout bugs, move knackss back into style guides

--- a/web/app/themes/wwp_child_theme/styleguide/scss/atoms/_headings.scss
+++ b/web/app/themes/wwp_child_theme/styleguide/scss/atoms/_headings.scss
@@ -9,15 +9,15 @@
 }
 
 h1, .h1-like{
-  font-size: 5rem;
-}
-
-h2, .h2-like{
   font-size: 4rem;
 }
 
-h3, .h3-like{
+h2, .h2-like{
   font-size: 3rem;
+}
+
+h3, .h3-like{
+  font-size: 2.5rem;
 }
 
 h4, .h4-like{
